syntax = "proto3";

package starknet.event;

import "common.proto";

message Event {
    starknet.common.Felt252  from_address = 1;
    repeated starknet.common.Felt252 keys = 2;
    repeated starknet.common.Felt252 data = 3;
}

message TxnEvents {
    repeated Event       events           = 1;
    starknet.common.Hash transaction_hash = 2;
}

message EventsRequest {
    starknet.common.Iteration iteration = 1;
}

// can be several in a single reply
message EventsResponse {
    message Events {
        // FIXME we need to know which transaction the events are for
        repeated TxnEvents items = 1;
    }

    uint64               block_number = 1;
    starknet.common.Hash block_hash   = 2;

    oneof responses {
        Events              events = 3;
        starknet.common.Fin fin    = 4;
    }
}
